--- a/rick/final/3_fit_model.Rmd
+++ b/rick/final/3_fit_model.Rmd
@@ -1,6 +1,6 @@
 ---
-title: "HGP analysis"
-subtitle: "fitting model for Chromosome `r commandArgs(trailingOnly=T)[1]`"
+title: "Quality Genotype Association"
+subtitle: "Fitting model for Chromosome `r commandArgs(trailingOnly=T)[1]`"
 author: 
 - name: Rick Farouni, 
   affiliation:
@@ -16,8 +16,7 @@ output:
       smooth_scroll: false
 ---
   
-  
-  # Preparations
+# Preparations
   
 ```{r setup}
 knitr::opts_knit$set(root.dir = rprojroot::find_rstudio_root_file(), fig.width=16)
@@ -25,7 +24,6 @@ options(scipen=999)
 
 # Rscript -e 'library(rmarkdown); rmarkdown::render("test.Rmd", "all")'  "22_10000" 
 chr <- commandArgs(trailingOnly=T)[1]
-#chr <- '22_10000'
 ```
 
 ```{r warning=FALSE}
@@ -35,13 +33,13 @@ library(furrr)
 library(glm2)
 library(tictoc)
 library(data.table)
-options(future.globals.maxSize= 1000000000000)
+options(future.globals.maxSize= 10000000000000)
 plan(multicore)
 ```
 
 ## define functions
 
-```{r}
+```{r functions}
 #this runs the logistic regression
 lreg <- function(y, X){
   X <- rbind(X, X)
@@ -88,137 +86,15 @@ fit_glm <- function(..., LF, trait){
                                1,
                                lower.tail = FALSE))
     ) %>% 
-    mutate(num_nas = sum(!ind),
-	   num_zeros= sum(snp_no_na ==0),
-           b=b1[length(b1)])
+    mutate(#num_nas = sum(!ind),
+	   #num_zeros= sum(snp_no_na ==0),
+           b=b1[length(b1)],
+	   dev1=NULL,
+	   dev0=NULL)
   
   return(list(dataset=dataset, stat=stat))
          
 }
-```
-
-```{r}
-plink_data_dir <- "./data/plink/by_chrom"
-metadata_dir <- "./data/metadata"
-preprocessed_dir <- "./data/preprocessed"
-bim_filepath <- file.path(plink_data_dir, paste0('chr', chr,'.bim'))
-fam_filepath <- file.path(plink_data_dir, paste0('chr', chr, '.fam'))
-bas_filepath <- file.path(metadata_dir, "average_quality_dt.txt")
-bed_filepath <- file.path(plink_data_dir, paste0('chr', chr))
-lf_filepath <-   file.path(preprocessed_dir, "lf5.rds")  
-fits_filepath <- 	file.path(preprocessed_dir, 
-                            "subsets",
-                            paste0("fits_chrom_", chr, ".rds"))
-```
-
-
-
-## load data
-
-get rsIDs and add them as rownames for genotype data
-```{r}
-tic("reading rsIDS.")
-data_bim <- fread(bim_filepath, 
-                  col.names = c('Chr','rsID','X',
-                                'Pos','Ref','Alt'))
-
-toc()
-data_bim
-```
-
-
-```{r}
-tic("load metadata.")
-fam_file <-read_delim(fam_filepath, 
-                      delim=" ", 
-                      col_names=c('sample','a','b','c','d','e')) %>%
-  select("sample")
-                 
-bas_dt <- read_tsv(bas_filepath)
-bas_dt <- left_join(fam_file, 
-                bas_dt,
-                by = 'sample') 
-toc()
-bas_dt
-```
-
-```{r}
-avg_qual_mean <- bas_dt$avg_qual_mean
-```
-
-
-
-load plink format genotype data
-```{r}
-tic("loading plink data.")
-data_genotype <- read.bed(bed_filepath)
-rownames(data_genotype) <- data_bim$rsID
-colnames(data_genotype) <- bas_dt$sample
-toc()
-data_genotype[1:5,1:5]
-```
-
-
-
-load logistic factor analysis results
-```{r read lf}
-#LF <- lfa(data_genotype, 5)
-#saveRDS(LF, "./data/preprocessed/lf5.rds")
-tic("load logistic factors.")
-LF <- readRDS(lf_filepath)
-toc()
-LF[1:5,]
-```
-
-
-
-
-```{r}
-gc()
-```
-
-```{r warning=FALSE}
-tic("fitting model")
-labels <- rownames(data_genotype)
-data_fit <- 
-	data_genotype %>%
-	as_tibble() %>%
-	transmute(
-	fit = future_pmap(., fit_glm,
-	LF=LF, 
-	trait=avg_qual_mean),
-		rsID=labels)  %>%
-	unnest(fit) %>%
-	mutate(l= rep(c("data","stat"), n()/2))%>%
-	spread(l, fit)%>%
-	unnest(stat)
-toc()
-```
-
-```{r}
-data_fit %>% arrange(-dev_logp) %>% slice(1:10)
-```
-
-
-```{r}
-rm(data_genotype)
-gc()
-```
-
-```{r}
-tic("saving fit")
-saveRDS(data_fit, fits_filepath)
-toc()
-```
-
-```{r}
-data_fit
-```
-
-
-
-```{r}
-
 get_plot <- function(data, data_stats) {
   p <- ggplot(bind_cols(data,
                         bas_dt %>%
@@ -242,12 +118,8 @@ get_plot <- function(data, data_stats) {
       x = 45,
       y = .75,
       label = sprintf("-10log(deviance) = %4f 
-                      number of NAs= %4d
-                      number of zeros= %4d
                       beta=%4f",
                       data_stats$dev_logp,
-                      data_stats$num_nas,
-                      data_stats$num_zeros,
                       data_stats$b),
       size = 3
     ) +
@@ -258,10 +130,126 @@ get_plot <- function(data, data_stats) {
 }
 ```
 
+```{r filepaths}
+plink_data_dir <- "./data/plink/by_chunk"
+metadata_dir <- "./data/metadata"
+preprocessed_dir <- "./data/preprocessed"
+file_name <- paste0("Split_", chr)
+bim_filepath <- file.path(plink_data_dir, paste0(file_name ,'.bim'))
+fam_filepath <- file.path(plink_data_dir, paste0(file_name , '.fam'))
+bas_filepath <- file.path(metadata_dir, "average_quality_fam.txt")
+bed_filepath <- file.path(plink_data_dir, file_name )
+lf_filepath <-   file.path(preprocessed_dir, "lf5.rds")  
+fits_filepath <- 	file.path(preprocessed_dir, 
+                            "subsets",
+                            paste0("fit_", chr, ".rds"))
+```
+
+
+
+## load data
+
+get rsIDs and add them as rownames for genotype data
+```{r load_bim}
+tic("reading rsIDS.")
+data_bim <- fread(bim_filepath, 
+                  col.names = c('Chr','rsID','X',
+                                'Pos','Ref','Alt')) %>%
+  select(rsID)
+
+toc()
+data_bim
+```
+
+
+```{r load_bas}
+bas_dt <- read_tsv(bas_filepath)
+
+# tic("load metadata.")
+# fam_file <-read_delim(fam_filepath, 
+#                       delim=" ", 
+#                       col_names=c('sample','a','b','c','d','e')) %>%
+#   select("sample")
+#                  
+# 
+# bas_dt <- left_join(fam_file, 
+#                 bas_dt,
+#                 by = 'sample') 
+# 
+# basfam_filepath <- "./data/metadata/average_quality_fam.txt"
+# write_tsv(bas_dt, basfam_filepath)
+# toc()
+avg_qual_mean <- bas_dt$avg_qual_mean
+bas_dt
+```
+
+
+load plink format genotype data
+```{r load_genotype}
+tic("loading plink data.")
+data_genotype <- read.bed(bed_filepath)
+rownames(data_genotype) <- data_bim$rsID
+colnames(data_genotype) <- bas_dt$sample
+toc()
+data_genotype[1:5,1:5]
+```
+
+
+
+load logistic factor analysis results
+```{r load_lf}
+#LF <- lfa(data_genotype, 5)
+#saveRDS(LF, "./data/preprocessed/lf5.rds")
+tic("load logistic factors.")
+LF <- readRDS(lf_filepath)
+toc()
+LF[1:5,]
+```
+
+
+```{r fit_data, warning=FALSE}
+labels <- rownames(data_genotype)
+data_genotype <- 
+	data_genotype %>%
+	as_tibble()
+
+tic("fitting model")
+data_genotype <- 
+	data_genotype %>%
+	transmute(
+	fit = future_pmap(., fit_glm,
+	LF=LF, 
+	trait=avg_qual_mean),
+		rsID=labels)  %>%
+	unnest(fit) %>%
+	mutate(l= rep(c("data","stat"), n()/2))%>%
+	spread(l, fit)%>%
+	unnest(stat)
+toc()
+```
+
+
+
 ```{r}
+data_genotype %>% arrange(-dev_logp) %>% slice(1:10)
+```
+
+```{r}
+gc()
+```
+
+```{r}
+tic("saving fit")
+saveRDS(data_genotype, fits_filepath)
+toc()
+```
+
+
+
+```{r subsets}
 subsets_top <-  
-  data_fit  %>%
-  top_n(5,dev_logp) 
+  data_genotype  %>%
+  top_n(4,dev_logp) 
 subsets_top
 ```
 
@@ -278,11 +266,11 @@ subsets_plots <-
   pull(plotted)
 ```
 
-```{r, fig.height=10}
+```{r plots,fig.width=20}
 subsets_plots
 ```
 
-```{r}
+```{r session_info}
 sessionInfo()
 ```
 
